Reimplemented accessibility text.

--- a/pages/game.html
+++ b/pages/game.html
@@ -239,8 +239,8 @@
 			</div>
 			<div class="wrapper-tabs card">
 				<div class="wrapper-tabs-buttons">
-					<button type="button" class="active"><span class="h3">Chat</span></button>
-					<button type="button"><span class="h3">Amis</span></button>
+					<button type="button" class="active"><span>Chat</span></button>
+					<button type="button"><span>Amis</span></button>
 				</div>
 				<div class="wrapper-tabs-tables">
 					<table class="tab-chat active">
