Added date on history's card.

--- a/pages/game.html
+++ b/pages/game.html
@@ -167,8 +167,40 @@
 						</button>
 					</div>
 					<div class="wrapper-options-tabs tab-tabs">
-						<form class="options-form">
-
+						<form class="options-form active">
+							<div>
+								<h4>Avatar</h4>
+								<label>
+									<p>Changer mon avatar:</p>
+									<input type="file" aria-label="Selectionner un nouvel avatar">
+								</label>
+							</div>
+							<div>
+								<h4>Connection</h4>
+								<label>
+									<p>Changer mon pseudonyme:</p>
+									<input type="text" aria-label="Nouveau pseudonyme">
+								</label>
+								<label>
+									<p>Changer mon email:</p>
+									<input type="email" aria-label="Nouveau email">
+								</label>
+								<label>
+									<p>Changer mon mot de passe:</p>
+									<input type="password" aria-label="Nouveau mot de passe">
+								</label>
+								<label>
+									<p>Changer mon 2ème facteur d'authentification:</p>
+									<input type="text" aria-label="Nouveau 2ème facteur d'authentification">
+								</label>
+							</div>
+							<div>
+								<h4>Langue</h4>
+							</div>
+							<div>
+								<h4>Light et Dark Mode (?)</h4>
+							</div>
+							<button type="button">Sauvegarder</button>
 						</form>
 						<table class="wrapper-blocked">
 							<tbody>
@@ -256,6 +288,7 @@
 										<span>User2</span>
 										<span>5</span>
 									</div>
+									<span class="history-card-date">04/08/2024</span>
 								</div>
 							</td>
 						</tr>
@@ -271,6 +304,7 @@
 										<span>User2</span>
 										<span>5</span>
 									</div>
+									<span class="history-card-date">04/08/2024</span>
 								</div>
 							</td>
 						</tr>
