Translated login page into Bootstrap.

--- a/pages/game.html
+++ b/pages/game.html
@@ -43,10 +43,10 @@
 		</ul>
 	</nav>
 </header>
-<main>
+<main class="game">
 	<h2>LOADING</h2>
 	<div class="wrapper-sections">
-		<section class="wrapper-left-section card">
+		<section class="wrapper-left-section my-card">
 			<form>
 				<div class="wrapper-selectors">
 					<div class="wrapper-game-selectors">
@@ -138,7 +138,7 @@
 			</div>
 		</section>
 		<div class="wrapper-screen zindex">
-			<div class="wrapper-screen-all card">
+			<div class="wrapper-screen-all my-card">
 				<div class="wrapper-canvas">
 				</div>
 				<form class="tournament-form hidden">
@@ -225,7 +225,7 @@
 					</div>
 				</div>
 			</div>
-			<section class="wrapper-bottom-section card">
+			<section class="wrapper-bottom-section my-card">
 				<div class="wrapper-player-controls">
 					<span class="playername playername-left"></span>
 					<div class="wrapper-controls-svg">
@@ -269,7 +269,7 @@
 			</section>
 		</div>
 		<section class="wrapper-right-section zindex">
-			<div class="wrapper-history card hidden">
+			<div class="wrapper-history my-card hidden">
 				<button type="button" class="cross-button">
 					<i class="fa-solid fa-xmark"></i>
 				</button>
@@ -311,7 +311,7 @@
 					</tbody>
 				</table>
 			</div>
-			<div class="wrapper-tabs card">
+			<div class="wrapper-tabs my-card">
 				<div class="wrapper-tabs-buttons wrapper-tab-button">
 					<button type="button" class="tab-button active">
 						<span>Chat</span>
@@ -436,7 +436,7 @@
 					</table>
 				</div>
 			</div>
-			<div class="wrapper-inputs card">
+			<div class="wrapper-inputs my-card">
 				<div class="chat-input active">
 					<i class="fa-solid fa-caret-right" title="Ecrivez aux autres joueurs !"></i>
 					<textarea maxlength="200"></textarea>
