Added show password.

--- a/pages/login.html
+++ b/pages/login.html
@@ -3,7 +3,12 @@
 		<form class="w-100 form-group text-center d-flex flex-column" autocomplete="on">
 			<h1 class="text-center mb-5 font-weight-bolder text-break">ft_transcendance</h1>
 			<input name="email" type="email" class="form-control border-top-0 border-left-0 border-right-0 border-bottom border-light rounded-0 form-group" placeholder="Email" aria-label="Email" aria-describedby="emailHelp">
-			<input name="password" type="password" minlength="10" class="form-control border-top-0 border-left-0 border-right-0 border-bottom border-light rounded-0 form-group password" placeholder="Mot de passe" aria-label="Mot de passe">
+			<div class="position-relative">
+				<button type="button" class="position-absolute border-0 show-password">
+					<i class="fa-solid fa-eye-slash"></i>
+				</button>
+				<input name="password" type="password" minlength="10" class="form-control pr-5 border-top-0 border-left-0 border-right-0 border-bottom border-light rounded-0 form-group password" placeholder="Mot de passe" aria-label="Mot de passe">
+			</div>
 			<input name="username" type="text" minlength="1" maxlength="30" class="form-control border-top-0 border-left-0 border-right-0 border-bottom border-light rounded-0 form-group username hidden" placeholder="Nom d'utilisateur" aria-label="Nom d'utilisateur">
 			<button type="submit" class="w-100 py-2 mb-1 text-break submit">Connexion</button>
 			<button type="button" class="mx-auto border-0 forgot-password" aria-label="Mot de passe oublie">Mot de passe oublié</button>
