Added restrictions for guests.

--- a/pages/game.html
+++ b/pages/game.html
@@ -18,17 +18,17 @@
 					<i class="fa-solid fa-gamepad" title="Jouer à un jeu"></i>
 				</button>
 			</li>
-			<li class="for-phone">
+			<li class="hide-for-guest for-phone">
 				<button>
 					<i class="fa-solid fa-message" title="Parler aux autres joueurs"></i>
 				</button>
 			</li>
-			<li class="for-phone">
+			<li class="hide-for-guest for-phone">
 				<button>
 					<i class="fa-solid fa-address-book" title="Liste d'amis"></i>
 				</button>
 			</li>
-			<li>
+			<li class="hide-for-guest">
 				<button>
 					<i class="fa-solid fa-gear" title="Options"></i>
 					<span>Options</span>
@@ -321,6 +321,7 @@
 					</button>
 				</div>
 				<div class="wrapper-tabs-tables tab-tabs">
+					<i class="fa-solid fa-lock hidden"></i>
 					<table class="tab-chat active">
 						<tbody>
 							<tr>
