--- a/pages/login.html
+++ b/pages/login.html
@@ -24,9 +24,9 @@
 					<polygon points="762.7,114.2 597.9,279.1 597.9,443.9 762.7,443.9 762.7,279.1 928,114.2 928,-51.1 762.7,-51.1 "/>
 					<polygon points="928,279.1 762.7,443.9 928,443.9 "/>
 				</svg>
-				Connexion avec 42
+				Continuer avec 42
 			</button>
-			<button class="w-100 py-2 my-1 text-break" aria-label="Jouer sans se connecter">
+			<button class="w-100 py-2 my-1 text-break special-login-guest" aria-label="Jouer sans se connecter">
 				<img src="/svg/incognito.svg" class="svg"/>
 				Continuer en tant qu'Invite
 			</button>
