--- a/User/transcendance/sources/index.html
+++ b/User/transcendance/sources/index.html
@@ -89,6 +89,7 @@
     <a><button type="button" class="boutton42" >>log with 42</button> </a> 
     
     <button id="testCookieButton">Test Cookie</button>
+    <a><button type="button" id="matchmaking" >>matchmak me</button> </a> 
     <script>
         document.getElementById('testCookieButton').addEventListener('click', () => {
             console.log(document.cookie.includes('auth=') ? 'Cookie "auth" présent' : 'Cookie "auth" absent');
@@ -98,6 +99,12 @@
             .then(console.log)
             .catch(console.error);
         });
+        document.getElementById('matchmaking').addEventListener('click', () => {          
+            fetch('/User/matchMaking/', { method: 'POST', credentials: 'include' })
+            .then(response => console.log(response.status))
+            .catch(console.error);
+        });
+
         </script>
 </body>
 <script src="{% static 'user/test.js' %}"></script>
