Finished options menu draft.

--- a/pages/game.html
+++ b/pages/game.html
@@ -1,6 +1,6 @@
 <div class="please-rotate">
 	<div></div>
-	<p>Veuillez tourner votre appareil sur le côté</p>
+	<p class="txt">Veuillez tourner votre appareil sur le côté</p>
 </div>
 <header>
 	<h1>ft_transcendance</h1>
@@ -31,26 +31,26 @@
 			<li class="hide-for-guest">
 				<button>
 					<i class="fa-solid fa-gear" title="Options"></i>
-					<span>Options</span>
+					<span class="txt">Options</span>
 				</button>
 			</li>
 			<li>
 				<button>
 					<i class="fa-solid fa-arrow-right-to-bracket" title="Se déconnecter"></i>
-					<span>Se deconnecter</span>
+					<span class="txt">Se deconnecter</span>
 				</button>
 			</li>
 		</ul>
 	</nav>
 </header>
 <main class="game">
-	<h2>LOADING</h2>
+	<h2 class="txt">CHARGEMENT</h2>
 	<div class="wrapper-sections">
 		<section class="wrapper-left-section my-card">
 			<form>
 				<div class="wrapper-selectors">
 					<div class="wrapper-game-selectors">
-						<h3 aria-label="Choisissez le jeu: Pong ou Tetris">Jeu</h3>
+						<h3 class="txt" aria-label="Choisissez le jeu: Pong ou Tetris">Jeu</h3>
 						<div class="wrapper-game-selector">
 							<label class="game-selector">
 								<input type="radio" name="game" value="pong" aria-label="Pong">
@@ -67,7 +67,7 @@
 						</div>
 					</div>
 					<div class="wrapper-mode-selectors">
-						<h3 aria-label="Choisissez le mode de jeu: ">Mode</h3>
+						<h3 class="txt" aria-label="Choisissez le mode de jeu: ">Mode</h3>
 						<div class="wrapper-mode-selector">
 							<label class="mode-selector">
 								<input disabled type="radio" name="mode" value="1vAI" aria-label="Joueur contre Ordinateur">
@@ -76,7 +76,7 @@
 										<span class="top-circle"></span>
 									</span>
 								</span>
-								<span class="mode-text">1vIA</span>
+								<span class="mode-text txt">1vIA</span>
 							</label>
 							<label class="mode-selector" title="Ce mode est désactivé sur téléphone et tablette">
 								<input type="radio" name="mode" value="1v1" aria-label="Joueur contre Joueur en local">
@@ -85,7 +85,7 @@
 										<span class="top-circle"></span>
 									</span>
 								</span>
-								<span class="mode-text">1v1 local</span>
+								<span class="mode-text txt">1v1 local</span>
 							</label>
 							<label class="mode-selector" title="Ce mode est désactivé sur téléphone et tablette">
 								<input type="radio" name="mode" value="tournament" aria-label="Tournoi a 4 joueurs en local">
@@ -94,7 +94,7 @@
 										<span class="top-circle"></span>
 									</span>
 								</span>
-								<span class="mode-text">Tournoi local a 4</span>
+								<span class="mode-text txt">Tournoi local a 4</span>
 							</label>
 							<label class="mode-selector" title="Ce mode est désactivé si vous n'êtes pas connecté">
 								<input disabled type="radio" name="mode" value="online" aria-label="Joueur contre Joueur en ligne">
@@ -103,14 +103,14 @@
 										<span class="top-circle"></span>
 									</span>
 								</span>
-								<span class="mode-text">1v1 en ligne</span>
+								<span class="mode-text txt">1v1 en ligne</span>
 							</label>
 						</div>
 					</div>
 				</div>
 				<div class="wrapper-submit-button">
 					<button id="selector" type="button" aria-label="Jouer !">
-						<span class="coin-text">Insérer une pièce</span>
+						<span class="coin-text txt">Insérer une pièce</span>
 						<span class="wrapper-slot">
 							<span class="slot"></span>
 						</span>
@@ -145,14 +145,14 @@
 					<button type="button" class="tournament-form-back">
 						<i class="fa-solid fa-circle-arrow-left"></i>
 					</button>
-					<span>Sélectionnez vos pseudonymes</span>
+					<span class="txt">Sélectionnez vos pseudonymes</span>
 					<div class="tournament-wrapper-inputs">
 						<input type="text" name="p1" maxlength="30" placeholder="Joueur 1" aria-label="Pseudonyme du joueur 1">
 						<input type="text" name="p2" maxlength="30" placeholder="Joueur 2" aria-label="Pseudonyme du joueur 2">
 						<input type="text" name="p3" maxlength="30" placeholder="Joueur 3" aria-label="Pseudonyme du joueur 3">
 						<input type="text" name="p4" maxlength="30" placeholder="Joueur 4" aria-label="Pseudonyme du joueur 4">
 					</div>
-					<button type="button" aria-label="Valider" >Valider</button>
+					<button class="txt" type="button" aria-label="Valider">Valider</button>
 				</form>
 				<div class="wrapper-options hidden">
 					<button type="button" class="cross-button">
@@ -160,48 +160,88 @@
 					</button>
 					<div class="wrapper-options-buttons wrapper-tab-button">
 						<button type="button" class="tab-button active">
-							<span>Compte</span>
+							<span class="txt">Compte</span>
 						</button>
 						<button type="button" class="tab-button">
-							<span>Bloqués</span>
+							<span class="txt">Bloqués</span>
 						</button>
 					</div>
 					<div class="wrapper-options-tabs tab-tabs">
-						<form class="options-form active">
-							<div>
-								<h4>Avatar</h4>
-								<label>
-									<p>Changer mon avatar:</p>
-									<input type="file" aria-label="Selectionner un nouvel avatar">
-								</label>
-							</div>
-							<div>
-								<h4>Connection</h4>
-								<label>
-									<p>Changer mon pseudonyme:</p>
-									<input type="text" aria-label="Nouveau pseudonyme">
-								</label>
-								<label>
-									<p>Changer mon email:</p>
-									<input type="email" aria-label="Nouveau email">
-								</label>
-								<label>
-									<p>Changer mon mot de passe:</p>
-									<input type="password" aria-label="Nouveau mot de passe">
-								</label>
-								<label>
-									<p>Changer mon 2ème facteur d'authentification:</p>
-									<input type="text" aria-label="Nouveau 2ème facteur d'authentification">
-								</label>
-							</div>
-							<div>
-								<h4>Langue</h4>
-							</div>
-							<div>
-								<h4>Light et Dark Mode (?)</h4>
-							</div>
-							<button type="button">Sauvegarder</button>
-						</form>
+						<div class="wrapper-options-forms active">
+							<form class="options-form">
+								<div class="options-section">
+									<h4 class="txt">Langue</h4>
+									<div class="options-wrapper-lang">
+										<label class="lang-label">
+											<span class="fi fi-fr"></span>
+											<span>Français</span>
+											<input type="radio" name="lang" value="fr" checked>
+										</label>
+										<label class="lang-label">
+											<span class="fi fi-us"></span>
+											<span>English</span>
+											<input type="radio" name="lang" value="en">
+										</label>
+										<label class="lang-label">
+											<img class="flag-vlaaderen" src="https://upload.wikimedia.org/wikipedia/commons/e/eb/Generieke_vlag_van_Vlaanderen.svg" alt="Drapeau Vlaaderen">
+											<span>Vlaanderen</span>
+											<input type="radio" name="lang" value="vl">
+										</label>
+									</div>
+									<p class="txt">N'oubliez pas de sauvegarder pour appliquer votre choix à la prochaine connexion</p>
+								</div>
+								<div class="options-section options-div">
+									<h4 class="txt">Avatar</h4>
+									<label>
+										<span class="txt">Changer mon avatar:</span>
+										<input type="file">
+									</label>
+								</div>
+								<div class="options-section options-div">
+									<h4 class="txt">Connexion</h4>
+									<div class="options-wrapper-connection">
+										<label>
+											<span class="txt">Nom d'utilisateur:</span>
+											<input type="text" name="options-username">
+										</label>
+										<label>
+											<span class="txt">Email:</span>
+											<input type="email" name="options-email">
+										</label>
+										<div class="options-wrapper-password">
+											<span class="txt">Mot de passe:</span>
+											<label>
+												<input type="password" name="options-password-actual" placeholder="Actuel">
+											</label>
+											<label>
+												<input type="password" name="options-password-new" placeholder="Nouveau">
+											</label>
+											<label>
+												<input type="password" name="options-password-confirmation" placeholder="Confirmation">
+											</label>
+										</div>
+									</div>
+								</div>
+								<button class="txt" type="submit">Sauvegarder</button>
+								<div class="options-section">
+									<h4 class="txt">Authentification à deux facteurs</h4>
+									<div class="options-wrapper-2fa">
+										<label class="2fa-label">
+											<input type="radio" name="2fa" value="off" checked>
+											<span class="txt">Désactiver</span>
+										</label>
+										<label class="2fa-label">
+											<input type="radio" name="2fa" value="sms">
+											<span class="txt">SMS</span>
+										</label>
+										<label class="2fa-label">
+											<input type="radio" name="2fa" value="app">
+											<span class="txt">Application Google</span>
+										</label>
+									</div>
+								</div>
+							</form>
+						</div>
 						<table class="wrapper-blocked">
 							<tbody>
 								<tr>
@@ -214,7 +254,7 @@
 												<span>User</span>
 												<button type="button" title="Retirer de la liste des bloqués">
 													<i class="fa-solid fa-square-minus"></i>
-													<span>Débloquer</span>
+													<span class="txt">Débloquer</span>
 												</button>
 											</div>
 										</div>
@@ -314,10 +354,10 @@
 			<div class="wrapper-tabs my-card">
 				<div class="wrapper-tabs-buttons wrapper-tab-button">
 					<button type="button" class="tab-button active">
-						<span>Chat</span>
+						<span class="txt">Chat</span>
 					</button>
 					<button type="button" class="tab-button">
-						<span>Amis</span>
+						<span class="txt">Amis</span>
 					</button>
 				</div>
 				<div class="wrapper-tabs-tables tab-tabs">
